--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nobita",
+  "name": "spider",
   "version": "1.0.0",
-  "description": "Nobita",
-  "main": "app.js",
+  "description": "spider",
+  "main": "index.js",
   "dependencies": {
     "cross-env": "^5.0.0",
     "download": "^8.0.0",
@@ -16,22 +16,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/nobitajs/nobita.git"
+    "url": "https://github.com/iamtang/spider"
   },
   "keywords": [
-    "koa",
-    "nobita"
+    "spider"
   ],
   "engines": {
     "node": ">=8.0.0"
   },
   "bugs": {
-    "url": "https://github.com/nobitajs/nobita/issues",
+    "url": "https://github.com/iamtang/spider/issues",
     "email": "303907720@qq.com"
   },
   "author": "JJ",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^5.11.1"
   }
 }
