--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 	  "target": "es6", /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
 	  "module": "commonjs", /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
-	  "sourceMap": true,                     /* Generates corresponding '.map' file. */
+	  "sourceMap": false,                     /* Generates corresponding '.map' file. */
 	  "outDir": "./dist", /* Redirect output structure to the directory. */
 	  "noEmitOnError": true, 
 	  "noUnusedLocals": true,
